syntax = "proto3";

package shk;

// This is the interface for a basic Content Addressable Storage service. It is
// used in Shuriken to store build outputs as well as the input source tree.
//
// One special aspect of this service is that all data stored in it has a
// time-to-live associated with it; nothing is ever stored forever. (This is
// because no data that a build system handles is valuable to keep forever.)
//
// This service has no knowledge of what it stores; it just handles binary blobs
// of data and the hashes of those blobs.
service Store {
  // Insert an entry into the Store.
  rpc Insert (stream StoreInsertRequest) returns (StoreInsertResponse);

  // Bump an already present entry's expiry time in the store. If it does not
  // exist, fails with a not found error.Check if an entry is already present in
  // the store. (This is used prior to making an Insert call, to avoid having to
  // upload things that are already there.)
  rpc Touch (StoreTouchRequest) returns (StoreTouchResponse);

  // Download an entry from the Store.
  rpc Get (StoreGetRequest) returns (stream StoreGetResponse);
}

message StoreInsertRequest {
  // Must be a 20 byte blake2b hash of the entire contents without chunking, or
  // the call will fail.
  bytes key = 1;
  // Total size in bytes of the contents. The call will fail is not set to the
  // correct value. Must not be negative.
  int64 size = 2;
  // Unix time in microseconds. Must not be negative.
  int64 expiry_time_micros = 3;
  // Must be no more than 64KB. If it is larger (or if the client wants to send
  // smaller chunks) the client can stream the data in the Insert request.
  // Subsequent StoreInsertRequest objects should have only the contents field
  // set. The provided key in the first message must still be a hash of the
  // entire contents before chunking.
  bytes contents = 4;
}

message StoreInsertResponse {
}

message StoreTouchRequest {
  bytes key = 1;  // 20 byte hash
  int64 expiry_time_micros = 2;  // Unix time in microseconds
}

message StoreTouchResponse {
}

message StoreGetRequest {
  bytes key = 1;  // 20 byte hash
}

message StoreGetResponse {
  // Unix time in microseconds. Set only in the first response message of the
  // stream.
  int64 expiry_time_micros = 1;
  // Contains the full size of the cell contents, even if the response is
  // chunked. Set only in the first response message of the stream.
  int64 size = 2;
  // The contents of the entry. If the entry is large, the response may be split
  // into smaller chunks and streamed.
  bytes contents = 3;
  // If not -1, indicates that the client should write this chunk's content
  // starting from the position indicated by reset_to, as some or all of the
  // contents will be re-read. This field is never used to jump forward.
  int64 reset_to = 4;
}
